Refactor logging system: implement unified CatWalkLogger with Adventure API
Replace excessive debug logging throughout the codebase with a centralized
logging utility that provides consistent formatting and appropriate log levels.

Changes:
- Add CatWalkLogger utility with Adventure API integration for colored console output
- Remove verbose logging from NetworkGateway, RequestProcessor, and BridgeEventHandlerProcessor
- Replace Slf4j dependencies with unified logging system
- Add proper log level control (debug messages only show when enabled)
- Implement special formatting for success messages with checkmarks
- Reduce console noise while preserving essential debugging capabilities

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>